--- a/config/api_keys.yml
+++ b/config/api_keys.yml
@@ -16,9 +16,9 @@ test:
 
 production:
   facebook:
-    api_key: "608041296203677"
-    api_secret: "df275315a35c5328ccfaa1b1d556f975"
-    redirect_uri: 'https://helpdesk786.herokuapp.com/users/auth/facebook/callback'
+    api_key: "713749919016164"
+    api_secret: "2c140244eac02d6aff6315fd3147916c"
+    redirect_uri: 'https://starhotel.herokuapp.com/users/auth/facebook/callback  '
   google:
     api_key: "300931973233-mttg01r2o0sjtaepgcdhlnve7k54mf35.apps.googleusercontent.com"
     api_secret: "Ks7ppZs5IFmO51tMFFwEy5Om"
